--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section id="about" class="about-me">
     <h2>About Me</h2>
     <p>神奈川県出身の大学生。幼少期からサッカーとフットサルを続けています。</p>
-    <p>IT技術を活かして「人々が本当に大事なタスクに集中できる世界」を作りたいです。</p>
+    <p>IT技術を活かして「人々が本質的なタスクに集中できる世界」を作りたいです。</p>
   </section>
 
 <section id="portfolio">
